fix horizontal scrollbar

--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -6,6 +6,7 @@
   height: 100vh;
   /* width */
   ::-webkit-scrollbar {
+    height: 8px;
     width: 8px;
   }
 
